# overkilled-todo-app

./: .env-example  .env.example  .gitignore  AGENTS.md  MINIKUBE.md  README.md  api-gateway.conf  docker-compose.yml  init.sql
.github/workflows/: acr-image-release.yaml  container-build.yaml  k8s-validate.yaml  terraform-validate.yaml
clusters/aks-dev/: README.md  kustomization.yaml
create-service-haskell/: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  create-service-haskell.cabal
create-service-haskell/app/: Database.hs  Main.hs
delete-service-erlang/: .dockerignore  Dockerfile  rebar.config
delete-service-erlang/src/: delete_handler.erl  delete_service.app.src  delete_service.erl  health_handler.erl  hello_handler.erl  readiness_handler.erl
docs/: agent-execution-playbook.md  aks-gitops-runbook.md  architecture.md  demo-script.md  phase-0-execution.md  platform-milestones.md  slo.md  upgrade-phases.md
istio/: README.md  gateway.yaml  virtualservice.yaml
k8s/: api-gateway-manifest.yaml  create-service-manifest.yaml  database-manifest.yaml  delete-service-manifest.yaml  front-end-manifest.yaml  ingress-manifest.yaml  phpmyadmin-manifest.yaml  read-service-manifest.yaml  update-service-manifest.yaml
observability/: README.md
read-service-go/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
scripts/: phase0_baseline.py
todo-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
update-service-rust/: .dockerignore  Cargo.toml  Dockerfile  README.md
update-service-rust/src/: main.rs
(+78 files in other folders)
