[package]
name = "update-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }  # Added "macros" feature
mysql = "26.0.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }